=== gnome-vfs 2.5.4.1 ===

2003-12-28  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am (EXTRA_DIST):
	Add OrigTree.pm

=== gnome-vfs 2.5.4 ===

2003-12-28  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Update for 2.5.4

2003-12-19  Christian Neumair  <chris@gnome-de.org>

	* schemas/desktop_gnome_url_handlers.schemas.in:
	* schemas/system_http_proxy.schemas.in:
	Introduce some consistency/simplification both in terminology and
	punctuation (#129492, #129493, #129497, #129498).

2003-12-18  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-utils.c (gnome_vfs_format_file_size_for_display):
	Correct unit for kilobyte is KB (according to style guide).

2003-12-15  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-module-shared.c (gnome_vfs_stat_to_file_info):
	Never make io_block_size less than 4k if set. That makes no sense.

	* libgnomevfs/gnome-vfs-xfer.c: (copy_file):
	Default to 8k buffer
	
	* modules/ftp-method.c: (unix_ls_to_file_info):
	* modules/ssh-method.c: (do_read_directory):
	Larger block sizes for remote methods.

2003-12-15  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-xfer.c (move_source_is_in_target):
	Don't unref NULL.

	* libgnomevfs/gnome-vfs-daemon-method.c (do_get_file_info):
	Never return NULL corba strings or structures

	* daemon/gnome-vfs-async-daemon.c (gnome_vfs_async_daemon_get_file_info):
	Handle failures better.

2003-12-10  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-module-callback-marshall.c:
	Remove debug spew.
	
2003-12-10  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/GNOME_VFS_Daemon.idl:
	* libgnomevfs/gnome-vfs-module-callback-marshall.c:
	Marshallers for the new auth callbacks.

2003-12-10  Carlos Romero  <kidcrash@bellsouth.net>

	* libgnomevfs/gnome-vfs-client.c: properly NULL terminate the list
	  of properties passed to g_object_new (fixes #128931)

2003-12-09  Alexander Larsson  <alexl@redhat.com>
