@@ -1,3 +1,9 @@
+2004-01-06  Federico Mena Quintero  <federico@ximian.com>
+
+	* libgnomevfs/gnome-vfs-drive.h: Fix the casting and type-testing macros.
+
+	* libgnomevfs/gnome-vfs-volume.h: Likewise.
+
 === gnome-vfs 2.5.4.1 ===
 
 2003-12-28  Alexander Larsson  <alexl@redhat.com>
